# deck-drop

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deckdrop/: main.py  single_instance.py
deckdrop/api/: deps.py  server.py  state.py  websocket.py
deckdrop/core/: comments.py  config.py  cover.py  game.py  integrity.py  library.py  service.py  torrent.py  torrent_prep.py
deckdrop/network/: discovery.py  (+2 more)
decky-plugin/: main.py  package.json  plugin.json  pnpm-lock.yaml  tsconfig.json
frontend/: api.js  app.js  errors.js  index.html  style.css
packaging/: build-appimage.sh  build-flatpak.sh  build-windows.bat  com.deckdrop.DeckDrop.desktop  com.deckdrop.DeckDrop.json  com.deckdrop.DeckDrop.metainfo.xml  deckdrop-kiosk.desktop  deckdrop-wrapper.sh  deckdrop.desktop  deckdrop.service  deckdrop.spec  flatpak-requirements.txt  generate-flatpak-sources.sh  install.sh  python3-deckdrop-deps.json  service-setup.sh
tests/: conftest.py  test_api_downloads.py  test_api_games.py  test_api_security.py  test_api_settings.py  test_auto_torrent_upgrade.py  test_comments.py  test_config.py  test_cover.py  test_discovery.py  test_download_archive.py  test_download_cover_persist.py  test_downloaded_game_no_prep.py  test_frontend.py  test_game.py  test_incomplete_download_library.py  test_integrity.py  test_library.py  test_metadata_sync.py  test_peer_cover.py  test_peer_registry.py  test_scenarios.py  test_single_instance.py  test_torrent_prep.py  test_torrent_skip_files.py  test_transfer_helpers.py  test_transfer_restore.py  test_transfer_state.py
(+18 files in other folders)
