[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deckdrop"
version = "2.0.0"
description = "LAN game sharing for Steam Deck and Linux"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "zeroconf>=0.132",
    "tomli-w>=1.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.optional-dependencies]
transfer = ["libtorrent>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10", "httpx>=0.27", "respx>=0.21"]

[project.scripts]
deckdrop = "deckdrop.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
